[package]
name = "token_address_extractor"
version = "1.0.0"
edition = "2024"
authors = ["mail@diloytte.com"]
license = "MIT"
repository = "https://github.com/diloytte/AddrXtractor"
homepage = "https://github.com/diloytte/AddrXtractor"
readme = "README.md"
description = "Library for extracting blockchain addresses from text."
keywords = ["crypto", "address", "extract", "token", "blockchain"]
categories = ["development-tools","text-processing","cryptography::cryptocurrencies"]


[dependencies]
once_cell = "1.21.3"
regex = "1.11.1"
